objects/n2de__Distribution_event__e.object
<CustomObject>
    <description>Distribution-related event</description>
    <fields>
        <fullName>n2de__Assigned_object_type__c</fullName>
        <label>Object type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Assigned_owner__c</fullName>
        <description>Assigned user/queue id</description>
        <label>Assigned owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Assigned_record_id__c</fullName>
        <label>Assigned record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Assigned_record_name__c</fullName>
        <label>Assigned record name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Event_type__c</fullName>
        <label>Event type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Distribution event</label>
    <pluralLabel>Distribution events</pluralLabel>
</CustomObject>